fixed issue with one of the news panel boxes going missing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -702,7 +702,7 @@ body {
   width: calc(300px * 1 + 20px * 0); /* 1 box on mobile */
   overflow: hidden;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: stretch;
 }
 
